5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1621_2931.log
== TEST (2019-04-01 19:03:19) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
gravidade = 9,81
v = math.sqrt(2g*h)
print(v)

-- ERROR:
File "XXXX", line 4
    v = math.sqrt(2g*h)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:03:57) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v = math.sqrt(2g*h)
print(float(v))

-- ERROR:
File "XXXX", line 4
    v = math.sqrt(2g*h)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:04:10) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v = math.sqrt(2g*h)
print(float(v))

-- ERROR:
File "XXXX", line 4
    v = math.sqrt(2g*h)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:04:18) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v = math*sqrt(2g*h)
print(float(v))

-- ERROR:
File "XXXX", line 4
    v = math*sqrt(2g*h)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:04:39) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v = sqrt(2g*h)
print(float(v))

-- ERROR:
File "XXXX", line 4
    v = sqrt(2g*h)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:04:48) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v = float(sqrt(2g*h)
print(float(v))

-- ERROR:
File "XXXX", line 4
    v = float(sqrt(2g*h)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:05:25) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v = sqrt(2g*h)
print(float(v))

-- ERROR:
File "XXXX", line 4
    v = sqrt(2g*h)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:06:23) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v = sqrt(2g*h)
v2 = float(v)
print(float(v))

-- ERROR:
File "XXXX", line 4
    v = sqrt(2g*h)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:08:08) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81

v2 = sqrt(2*g*h)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v2 = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:08:25) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v2 = sqrt(2*g*h)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v2 = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:08:33) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v2 = sqrt(2*g*h)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v2 = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:08:52) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v2 = float(sqrt(2*g*h)
print(v)

-- ERROR:
File "XXXX", line 5
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:09:46) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v2 = math*sqrt(2*g*h)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v2 = math*sqrt(2*g*h)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:09:57) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v2 = math.sqrt(2*g*h)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v2 = math.sqrt(2*g*h)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:12) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v2 = sqrt(2*g*h)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v2 = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:28) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v2 = sqrt(2g*h)
print(v)

-- ERROR:
File "XXXX", line 4
    v2 = sqrt(2g*h)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:19:34) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v2 = sqrt(2*g*h)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v2 = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:19:45) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
v = sqrt(2*g*h)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:23:46) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
vvelocidade = sqrt(2*g*h)
print(velocidade)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vvelocidade = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:23:56) 
-- CODE:
from math import*
alturah = float(input("quanto vale h:"))
g = 9,81
velocidade = sqrt(2*g*h)
print(velocidade)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    velocidade = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:24:16) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = sqrt(2*g*h)
print(velocidade)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    velocidade = sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:24:30) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = math*sqrt(2*g*h)
print(velocidade)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    velocidade = math*sqrt(2*g*h)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:24:38) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = math.sqrt(2*g*h)
print(velocidade)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    velocidade = math.sqrt(2*g*h)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:46) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = math.sqrt(2*g*h)
print(round(velocidade, 15)

-- ERROR:
File "XXXX", line 6
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:51) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = math.sqrt(2*g*h)
print(round(velocidade, 2)

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:26:21) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = math.sqrt(2*g*h)
print(float(velocidade)

-- ERROR:
File "XXXX", line 6
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:26:26) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = math.sqrt(2*g*h)
print(float(velocidade, 2)

-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:28:39) 
-- CODE:
from math import*
h = float(input("altura:"))
g = 9,81
velocidade = sqrt(float(2*g*h)
print(float(velocidade)

-- ERROR:
File "XXXX", line 5
    print(float(velocidade)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:29:19) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = float(sqrt(2*g*h))
print(float(velocidade)

-- ERROR:
File "XXXX", line 6
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:29:27) 
-- CODE:
from math import*
alturah = float(input("altura:"))
g = 9,81
velocidade = float(sqrt(2*g*h))
print(velocidade)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    velocidade = float(sqrt(2*g*h))
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:29:41) 
-- CODE:
from math import*
h = float(input("altura:"))
g = 9,81
velocidade = float(sqrt(2*g*h))
print(velocidade)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    velocidade = float(sqrt(2*g*h))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:05) 
-- CODE:
from math import*
h = float(input("altura:"))
g = 9,81
vel = float(sqrt(2*g*h))
print(vel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vel = float(sqrt(2*g*h))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:37) 
-- CODE:
from math import*
h = float(input("altura:"))
g = 9,81
vel = float(sqrt(2*g*h))
print(float(vel)

-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:45) 
-- CODE:
from math import*
h = float(input("altura:"))
g = 9,81
vel = float(sqrt(2*g*h))
print(round(vel, 2)

-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:51) 
-- CODE:
from math import*
h = float(input("altura:"))
g = 9,81
vel = float(sqrt(2*g*h))
print(round(vel, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:10) 
-- CODE:
from math import*
h = float(input("altura:"))
g = 9,81
vel = (sqrt(2*g*h))
print(round(vel, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:44) 
-- CODE:
from math import*
h = float(input("altura:"))
g = 9,81
vel = (sqrt(2*g*h))
print(round(vel, 2)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:04) 
-- CODE:
from math import*
h = float(input("altura:"))

-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:53) 
-- CODE:
from math import*
h = int(input("altura:"))
g=9,81
v= sqrt(2*g*h)
print(round(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    h = int(input())
ValueError: invalid literal for int() with base 10: '152.8'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:07) 
-- CODE:
from math import*
h = float(input("altura:"))
g=9,81
v= sqrt(2*g*h)
print(round(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v= sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:50) 
-- CODE:
h = float(input("altura:"))
g=9,81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v= sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:35:52) 
-- CODE:
h = float(input("altura:"))
g=9,81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.19748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 4, in <module>
    v= sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:59) 
-- CODE:
h = float(input("altura:"))
g=9,81
from math import*
v= sqrt(2*g*h)
print(round(v. 2))

-- ERROR:
File "XXXX", line 5
    print(round(v. 2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:36:08) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:36:09) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.15712
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:36:23) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.198903
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:36:24) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:36:41) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(float(v, 2))

-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:36:58) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:36:59) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- EXECUTION TIME:
0.1616
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:05) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v. 2))

-- ERROR:
File "XXXX", line 5
    print(float(v. 2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:08) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v 2))

-- ERROR:
File "XXXX", line 5
    print(float(v 2))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:17) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:32) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
velocidade= sqrt(2*g*h)
print(float(velocidade, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(velocidade, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:50) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
velocidade= sqrt(2*g*h)
print(round(velocidade, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:37:57) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
velocidade= sqrt(2*g*h)
print(round(velocidade, 2))

-- EXECUTION TIME:
0.210836
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:23) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
velocidade= sqrt(2*g*h)
print(float(velocidade, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(velocidade, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:42) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:12) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:39:13) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.131147
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:26) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v. 2))

-- ERROR:
File "XXXX", line 5
    print(round(v. 2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:39:28) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v. 2))

-- EXECUTION TIME:
0.159641
-- ERROR:
  File "/home/codebench/codes/1621/2931/main.py", line 5
    print(round(v. 2))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:39:32) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.205659
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:38) 
-- CODE:
h = float(input("altura:"))
g=9,81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v= sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:39:41) 
-- CODE:
h = float(input("altura:"))
g=9,81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.16896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 4, in <module>
    v= sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:39:51) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.198126
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:51) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:40:13) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:40:15) 
-- CODE:
h = float(input("altura:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.209683
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:40:29) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:40:36) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.139567
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:40:53) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:40:55) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- EXECUTION TIME:
0.172437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:41:02) 
-- CODE:
h = float(input("alturah:"))
g=9.81
math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- EXECUTION TIME:
0.1265
-- ERROR:
  File "/home/codebench/codes/1621/2931/main.py", line 3
    math import*
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:41:09) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import
v= sqrt(2*g*h)
print(float(v, 2))

-- EXECUTION TIME:
0.164131
-- ERROR:
  File "/home/codebench/codes/1621/2931/main.py", line 3
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:41:12) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- EXECUTION TIME:
0.164956
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:17) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:41:27) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.162547
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:39) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:41:44) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.153696
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:57) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:42:11) 
-- CODE:
h = float(input("alturah:"))
g=9,81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.154586
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 4, in <module>
    v= sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:42:14) 
-- CODE:
h = float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.199148
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:42:27) 
-- CODE:
altura= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.145204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 4, in <module>
    v= sqrt(2*g*h)
NameError: name 'h' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:28) 
-- CODE:
altura= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v= sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:03) 
-- CODE:
altura= float(input("alturah:"))
g=9.81
from math import*
v= math*sqrt(2*g*h)
print(round(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v= math*sqrt(2*g*h)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:43:05) 
-- CODE:
altura= float(input("alturah:"))
g=9.81
from math import*
v= math*sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.119947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 4, in <module>
    v= math*sqrt(2*g*h)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:43:07) 
-- CODE:
altura= float(input("alturah:"))
g=9.81
from math import*
v= math.sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.160933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 4, in <module>
    v= math.sqrt(2*g*h)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:43:11) 
-- CODE:
altura= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.155296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 4, in <module>
    v= sqrt(2*g*h)
NameError: name 'h' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:11) 
-- CODE:
altura= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v= sqrt(2*g*h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:22) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:43:31) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.227372
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:01) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:44:11) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.158281
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:59) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:45:25) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- EXECUTION TIME:
0.158393
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:26) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(v, 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:45:34) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v. 2))

-- EXECUTION TIME:
0.174902
-- ERROR:
  File "/home/codebench/codes/1621/2931/main.py", line 5
    print(float(v. 2))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:35) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(float(v. 2))

-- ERROR:
File "XXXX", line 5
    print(float(v. 2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:42) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v. 2))

-- ERROR:
File "XXXX", line 5
    print(round(v. 2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:45:49) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.140019
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:50) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:45:58) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.150311
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:46:38) 
-- CODE:
h= float(input("alturah:"))
g=9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.134535
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:47:07) 
-- CODE:
h= float(input("alturah:"))
g= 9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.217731
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:08) 
-- CODE:
h= float(input("alturah:"))
g= 9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:47:39) 
-- CODE:
h= float(input("alturah:"))
g= 9.81
from math import*
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.1707
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:55) 
-- CODE:
h= float(input("alturah:"))
g= 9.81
from math import*
v= sqrt(2.g.h)
print(round(v, 2))

-- ERROR:
File "XXXX", line 4
    v= sqrt(2.g.h)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:47:57) 
-- CODE:
h= float(input("alturah:"))
g= 9.81
from math import*
v= sqrt(2.g.h)
print(round(v, 2))

-- EXECUTION TIME:
0.203672
-- ERROR:
  File "/home/codebench/codes/1621/2931/main.py", line 4
    v= sqrt(2.g.h)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:39) 
-- CODE:
h= float(input("alturah:"))
from math import*
g=9,81
v= sqrt(2*g*h)
print(round(v, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v= sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:48:41) 
-- CODE:
h= float(input("alturah:"))
from math import*
g=9,81
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.155224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 4, in <module>
    v= sqrt(2*g*h)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:48:45) 
-- CODE:
h= float(input("alturah:"))
from math import*
g=9.81
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.185649
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:49:08) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:49:45) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(round(v, 2))

-- OUTPUT:
54.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:49:50) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(round(v, 2))

-- EXECUTION TIME:
0.286443
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.75
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.89
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:50:00) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(round(v, 2)

-- EXECUTION TIME:
0.147692
-- ERROR:
  File "/home/codebench/codes/1621/2931/main.py", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:00) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(round(v, 2)

-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:13) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2))

-- ERROR:
File "XXXX", line 5
    print(v, 2))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:50:14) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2))

-- EXECUTION TIME:
0.204585
-- ERROR:
  File "/home/codebench/codes/1621/2931/main.py", line 5
    print(v, 2))
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:50:17) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2)

-- EXECUTION TIME:
0.217461
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.753410852658305 2
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.8898366502273 2
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.785246276190943 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:17) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2)

-- OUTPUT:
54.753410852658305 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:50:33) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2)

-- EXECUTION TIME:
0.280606
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.753410852658305 2
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.8898366502273 2
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.785246276190943 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:34) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2)

-- OUTPUT:
54.753410852658305 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:50:50) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2)
float(v, 2)
-- EXECUTION TIME:
0.218236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2931/main.py", line 6, in <module>
    float(v, 2)
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:51) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2)
float(v, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    float(v, 2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:00) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v, 2)
-- OUTPUT:
54.753410852658305 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:12) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v)
-- OUTPUT:
54.753410852658305
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:51:18) 
-- CODE:
h= float(input("alturah:"))
from math import*
g= 9.81
v= sqrt(2*g*h)
print(v)
-- EXECUTION TIME:
0.124353
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.753410852658305
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.8898366502273
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.785246276190943
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
